# so_easy

./: .gitignore  pyproject.toml
app/app/: settings.py  urls.py
app/movies/: admin.py  models.py  urls.py  views.py
app/movies/fixtures/: career.json  categories.json  celebrities.json  countries.json  genres.json  movies.json
app/movies/migrations/: 0001_initial.py
app/movies/templates/: base.html
app/movies/templates/includes/: footer.html  login.html  menu.html  page-header.html  pagination.html  search.html  subscribe.html
app/movies/templates/movies/: celebrities-list.html  celebrity-detail.html  index.html  movie-detail.html  movie-list.html
app/movies/templatetags/: movies_tags.py
app/static/assets/css/: style.css
